samples/_failures_safe/1761342007_f19742_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ce754ab.c: In function ‘main’:
./samples/SAFE/__tmp_1ce754ab.c:142:9: error: expected declaration or statement at end of input
  142 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_1ce754ab.c:142:9: error: expected declaration or statement at end of input
